--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,37 +1,20 @@
-<div>
-    <p-dataTable [value]="cars" selectionMode="single" [(selection)]="selectedCar" (onRowSelect)="onRowSelect($event)" [paginator]="true" [rows]="10" [responsive]="true">
-        <header>CRUD for Cars</header>
-        <p-column field="vin" header="Vin" [sortable]="true"></p-column>
-        <p-column field="year" header="Year" [sortable]="true"></p-column>
-        <p-column field="brand" header="Brand" [sortable]="true"></p-column>
-        <p-column field="color" header="Color" [sortable]="true"></p-column>
-        <footer><div class="ui-helper-clearfix" style="width:100%"><button type="button" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add"></button></div></footer>
-    </p-dataTable>
-
-    <p-dialog header="Car Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
-        <div class="ui-grid ui-grid-responsive ui-fluid ui-grid-pad" *ngIf="car">
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-4"><label for="vin">Vin</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="vin" [(ngModel)]="car.vin" /></div>
-            </div>
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-4"><label for="brand">Year</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="brand" [(ngModel)]="car.year" /></div>
-            </div>
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-4"><label for="brand">Brand</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="brand" [(ngModel)]="car.brand" /></div>
-            </div>
-            <div class="ui-grid-row">
-                <div class="ui-grid-col-4"><label for="color">Color</label></div>
-                <div class="ui-grid-col-8"><input pInputText id="color" [(ngModel)]="car.color" /></div>
-            </div>
-        </div>
-        <footer>
-            <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
-                <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
-                <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
-            </div>
-        </footer>
-    </p-dialog>
-</div>
+<p-tabView>
+    <p-tabPanel header="Godfather I" leftIcon="fa-calendar">
+        The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis daughter's wedding. His beloved son
+        ichael has just come home from the war, but does not intend to become part of his father's business. T hrough Michael's
+        life the nature of the family business becomes clear. The business of the family is just like the head of the family,
+        kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the
+        good of the family.
+    </p-tabPanel>
+    <p-tabPanel header="Godfather II" leftIcon="fa-print">
+        Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather parallels the young Vito
+        Corleone's rise with his son Michael's spiritual fall, deepening The_Godfather's depiction of the dark side of the
+        American dream. In the early 1900s, the child Vito flees his Sicilian village for America after the local Mafia kills
+        his family. Vito struggles to make a living, legally or illegally, for his wife and growing brood in Little Italy,
+        killing the local Black Hand Fanucci after he demands his customary cut of the tyro's business. With Fanucci gone,
+        Vito's communal stature grows.
+    </p-tabPanel>
+    <p-tabPanel header="Godfather III" leftIcon="fa-bell-o" rightIcon="fa-bookmark-o">
+        <my-app2></my-app2>
+    </p-tabPanel>
+</p-tabView>
