--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,10 +1,6 @@
 <p-tabView>
-    <p-tabPanel header="Godfather I" leftIcon="fa-calendar">
-        The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis daughter's wedding. His beloved son
-        ichael has just come home from the war, but does not intend to become part of his father's business. T hrough Michael's
-        life the nature of the family business becomes clear. The business of the family is just like the head of the family,
-        kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the
-        good of the family.
+    <p-tabPanel header="Home" leftIcon="fa-bar-chart-o">
+        <home-app></home-app>
     </p-tabPanel>
     <p-tabPanel header="Godfather II" leftIcon="fa-print">
         Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather parallels the young Vito
