First chart ready

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -11,6 +11,6 @@
         Vito's communal stature grows.
     </p-tabPanel>
     <p-tabPanel header="Godfather III" leftIcon="fa-bell-o" rightIcon="fa-bookmark-o">
-        <my-app2></my-app2>
+        <!--my-app2></my-app2-->
     </p-tabPanel>
 </p-tabView>
