--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,7 +2,7 @@
     <p-tabPanel header="Home" leftIcon="fa-bar-chart-o">
         <home-app></home-app>
     </p-tabPanel>
-    <p-tabPanel header="Godfather II" leftIcon="fa-print">
+    <p-tabPanel header="Hierarquia" leftIcon="fa-sitemap">
         Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather parallels the young Vito
         Corleone's rise with his son Michael's spiritual fall, deepening The_Godfather's depiction of the dark side of the
         American dream. In the early 1900s, the child Vito flees his Sicilian village for America after the local Mafia kills
