--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,7 +5,8 @@
     <p-tabPanel header="Hierarquia" leftIcon="fa-sitemap">
         <tree-app></tree-app>
     </p-tabPanel>
-    <p-tabPanel header="Godfather III" leftIcon="fa-bell-o" rightIcon="fa-bookmark-o">
+    <p-tabPanel header="Configurações" leftIcon="fa-cog">
+        <config-app></config-app>
         <!--my-app2></my-app2-->
     </p-tabPanel>
 </p-tabView>
