--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,12 +1,14 @@
-<p-tabView>
-    <p-tabPanel header="Home" leftIcon="fa-bar-chart-o">
-        <home-app></home-app>
-    </p-tabPanel>
-    <p-tabPanel header="Hierarquia" leftIcon="fa-sitemap">
-        <tree-app></tree-app>
-    </p-tabPanel>
-    <p-tabPanel header="Configurações" leftIcon="fa-cog">
-        <config-app></config-app>
-        <!--my-app2></my-app2-->
-    </p-tabPanel>
-</p-tabView>
+<div>
+    <p-tabView>
+        <p-tabPanel header="Home" leftIcon="fa-bar-chart-o">
+            <home-app></home-app>
+        </p-tabPanel>
+        <p-tabPanel header="Hierarquia" leftIcon="fa-sitemap">
+            <tree-app></tree-app>
+        </p-tabPanel>
+        <p-tabPanel header="Configurações" leftIcon="fa-cog">
+            <config-app></config-app>
+            <!--my-app2></my-app2-->
+        </p-tabPanel>
+    </p-tabView>
+</div>
