--- a/app/app.component.html
+++ b/app/app.component.html
@@ -8,7 +8,9 @@
         </p-tabPanel>
         <p-tabPanel header="Configurações" leftIcon="fa-cog">
             <config-app></config-app>
-            <!--my-app2></my-app2-->
+        </p-tabPanel>
+        <p-tabPanel header="Example" leftIcon="fa-cog">
+            <my-car></my-car>
         </p-tabPanel>
     </p-tabView>
 </div>
