--- a/app/app.component.html
+++ b/app/app.component.html
@@ -9,7 +9,7 @@
         <p-tabPanel header="Configurações" leftIcon="fa-cog">
             <config-app></config-app>
         </p-tabPanel>
-        <p-tabPanel header="Example" leftIcon="fa-cog">
+        <p-tabPanel header="Example" leftIcon="fa-automobile">
             <my-car></my-car>
         </p-tabPanel>
     </p-tabView>
