--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,3 +1,9 @@
+<p-dialog [(visible)]="display" [closable]=false [resizable]=false [draggable]=false [width]=172 [modal]=true>
+    <header>
+        <img src="app/resources/images/loader2.gif" />
+    </header>
+</p-dialog>
+
 <div>
     <p-tabView>
         <p-tabPanel header="Home" leftIcon="fa-bar-chart-o">
