Validation test implemented

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -12,5 +12,8 @@
         <p-tabPanel header="Example" leftIcon="fa-automobile">
             <my-car></my-car>
         </p-tabPanel>
+        <p-tabPanel header="Validation" leftIcon="fa-check-square-o">
+            <validationdemo-app></validationdemo-app>
+        </p-tabPanel>
     </p-tabView>
 </div>
