Lazy Load implemented!

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,19 +1,11 @@
 <div>
-    <p-tabView>
-        <p-tabPanel header="Home" leftIcon="fa-bar-chart-o">
-            <home-app></home-app>
-        </p-tabPanel>
-        <p-tabPanel header="Hierarquia" leftIcon="fa-sitemap">
-            <tree-app></tree-app>
-        </p-tabPanel>
-        <p-tabPanel header="Configurações" leftIcon="fa-cog">
-            <config-app></config-app>
-        </p-tabPanel>
-        <p-tabPanel header="Example" leftIcon="fa-automobile">
-            <my-car></my-car>
-        </p-tabPanel>
-        <p-tabPanel header="Validation" leftIcon="fa-check-square-o">
-            <validationdemo-app></validationdemo-app>
-        </p-tabPanel>
+    <p-tabView (onChange)="handleChange($event)">
+        <p-tabPanel header="Home" leftIcon="fa-bar-chart-o"></p-tabPanel>
+        <p-tabPanel header="Hierarquia" leftIcon="fa-sitemap"></p-tabPanel>
+        <p-tabPanel header="Configurações" leftIcon="fa-cog"></p-tabPanel>
+        <p-tabPanel header="Example" leftIcon="fa-automobile"></p-tabPanel>
+        <p-tabPanel header="Validation" leftIcon="fa-check-square-o"></p-tabPanel>
     </p-tabView>
 </div>
+
+<router-outlet></router-outlet>
